@@ -14,15 +14,12 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
@@ -36,7 +33,7 @@ public class FoodManagerTest {
 
     @Test
     @DisplayName("식재료 저장 요청 시 리포지토리 호출 및 결과 반환")
-    void register_SUCCESS() throws Exception {
+    void register_SUCCESS() {
         //given
         Food food = FoodFixture.createFood();
         FoodEntity foodEntity = FoodFixture.createFoodEntity(1L);
@@ -50,12 +47,12 @@ public class FoodManagerTest {
 
     @Test
     @DisplayName("식재료 커서 요청 시 리포지토리 호출 및 리스트 결과 반환")
-    void findFoodList_SUCCESS() throws Exception {
+    void findFoodList_SUCCESS() {
         //given
         Long categoryId = 1L;
         String memberKey = FoodFixture.MEMBER_KEY;
-        LocalDateTime lastCreatedAt = LocalDateTime.now();
-        Cursorable<LocalDateTime> cursorable = new Cursorable<>(lastCreatedAt, 2);
+        long foodId = 1L;
+        Cursorable<Long> cursorable = new Cursorable<>(foodId, 2);
 
         List<FoodEntity> foodEntities = List.of(
                 FoodFixture.createFoodEntity(1L),
@@ -68,12 +65,12 @@ public class FoodManagerTest {
         //then
         assertThat(results.content()).hasSize(2);
         assertThat(results.content().getFirst().name()).isEqualTo(FoodFixture.NAME);
-        assertThat(results.content().get(0)).isInstanceOf(Food.class);
+        assertThat(results.content().getFirst()).isInstanceOf(Food.class);
     }
 
     @Test
     @DisplayName("식재료 단일 조회 시 식재료 세부정보 반환")
-    void findFoodById_SUCCESS() throws Exception {
+    void findFoodById_SUCCESS() {
         //given
         Long foodId = FoodFixture.ID;
         String memberKey = FoodFixture.MEMBER_KEY;
@@ -89,7 +86,7 @@ public class FoodManagerTest {
 
     @Test
     @DisplayName("선택된 식재료들의 이름 조회 시 이름 리스트 반환")
-    void findFoodNames_SUCCESS() throws Exception {
+    void findFoodNames_SUCCESS() {
         //given
         String memberKey = FoodFixture.MEMBER_KEY;
         FoodEntity entity1 = FoodFixture.createFoodEntity(1L);
@@ -104,7 +101,7 @@ public class FoodManagerTest {
 
     @Test
     @DisplayName("식재료 삭제")
-    void removeFood_SUCCESS() throws Exception {
+    void removeFood_SUCCESS() {
         //given
         Food food = FoodFixture.createFood();
         //when
